@@ -73,7 +73,8 @@ import java.util.Set;
 public abstract class AbstractQueryContainer<T> extends AbstractContainer implements Container.Ordered, Container.Indexed,
   Container.PropertySetChangeNotifier, Container.ItemSetChangeNotifier {
 
-    protected QueryList<? extends T> queryList;
+    private QueryList<? extends T> queryList;
+    private long totalSize = -1;
 
     private final HashMap<String, PropertyDef<?>> propertyMap = new HashMap<String, PropertyDef<?>>();
     private PropertyExtractor<? super T> propertyExtractor;
@@ -184,14 +185,8 @@ public abstract class AbstractQueryContainer<T> extends AbstractContainer implem
      * The {@code hint} can be used to implement a highly scalable query list containing external objects
      * (such as from a database) where only a small "window" of objects is actually kept in memory at any one time.
      * Of course, implementations are also free to ignore {@code hint}. However, the returned {@link QueryList}
-     * must at least tolerate one invocation of <code>{@link QueryList#get get}(hint)</code> without throwing an exception,
-     * assuming that {@code hint} does not exceed the size of the list.
-     * </p>
-     *
-     * <p>
-     * Note that it's perfectly acceptable for the returned {@link QueryList} to have a {@link QueryList#size size()}
-     * that is less than the given {@code hint}. This may occur for example if previously {@link QueryList#size size()}
-     * returned an estimate that was too high.
+     * must at least tolerate one invocation of <code>{@link QueryList#get get}(hint)</code> without throwing an exception
+     * when {@code hint} is less that the {@link QueryList#size size()} of the returned {@link QueryList}.
      * </p>
      *
      * @param hint index of the list element we are interested in
@@ -212,34 +207,71 @@ public abstract class AbstractQueryContainer<T> extends AbstractContainer implem
      * @return backing object, or null if {@code index} is out of range
      */
     protected T getJavaObject(int index) {
+        Exception exception;
+        long currentSize;
         for (boolean first = true; true; first = false) {
-            if (index < 0 || index >= this.ensureList(index).size())
+            currentSize = this.ensureList(index);
+            if (index < 0 || index >= currentSize)
                 return null;
             try {
                 return this.queryList.get(index);
-            } catch (IndexOutOfBoundsException e) {
-                this.invalidate();
-                return null;
             } catch (InvalidQueryListException e) {
                 this.invalidate();
                 if (!first) {
-                    throw new RuntimeException("query() was given a hint of "
-                      + index + " but QueryList.get(" + index + ") failed", e);
+                    exception = e;
+                    break;
                 }
+            } catch (IndexOutOfBoundsException e) {
+                exception = e;
+                break;
             }
         }
+
+        // The QueryList is behaving badly
+        throw new RuntimeException("query(" + index + ") returned a QueryList with size() = "
+          + currentSize + " but QueryList.get(" + index + ") failed", exception);
     }
 
     /**
      * Ensure we have a cached query list.
      *
      * @param hint index of the list element we are interested in, passed to {@link #query} if no query list is cached
-     * @return cached query list, never null
+     * @return the size of the cached query list
      */
-    protected QueryList<? extends T> ensureList(int hint) {
-        if (this.queryList == null)
+    protected long ensureList(int hint) {
+        if (this.queryList == null) {
             this.queryList = this.query(hint);
-        return this.queryList;
+            final long oldTotalSize = this.totalSize;
+            final long newTotalSize = this.queryList.size();
+            this.totalSize = newTotalSize;
+            if (oldTotalSize != -1 && newTotalSize != oldTotalSize)
+                this.handleSizeChange();
+        }
+        return this.totalSize;
+    }
+
+    /**
+     * Invoked when a new {@link QueryList} has returned a changed {@link QueryList#size size()}
+     * for the underlying list.
+     *
+     * <p>
+     * Normally, this implies an item set change notification will be generated elsewhere and so
+     * no additional action needs to be taken by this method. However, some implementations may
+     * lack such a mechanism, for example, when the container's size is only ever calculated when
+     * {@link #query} is invoked. In such cases, this method may trigger a notification.
+     * </p>
+     *
+     * <p>
+     * Note: to avoid re-entrancy problems, this method should not send out any notifications itself;
+     * instead, it may schedule notifications to be delivered later (perhaps in a different thread).
+     * </p>
+     *
+     * <p>
+     * The implementation in {@link AbstractQueryContainer} does nothing, assuming the notification is handled
+     * elsewhere. Subclasses may override if needed.
+     * </p>
+     */
+    protected void handleSizeChange() {
     }
 
 // Container
@@ -280,7 +312,7 @@ public abstract class AbstractQueryContainer<T> extends AbstractContainer implem
 
     @Override
     public int size() {
-        return (int)this.ensureList(0).size();
+        return (int)this.ensureList(0);
     }
 
     @Override
@@ -288,7 +320,7 @@ public abstract class AbstractQueryContainer<T> extends AbstractContainer implem
         if (!(itemId instanceof Integer))
             return false;
         int index = ((Integer)itemId).intValue();
-        return index >= 0 && index < this.ensureList(index).size();
+        return index >= 0 && index < this.ensureList(index);
     }
 
     /**
@@ -361,7 +393,7 @@ public abstract class AbstractQueryContainer<T> extends AbstractContainer implem
     public Integer getIdByIndex(int index) {
         if (index < 0)
             throw new IndexOutOfBoundsException("index < " + index);
-        final long size = this.ensureList(index).size();
+        final long size = this.ensureList(index);
         if (index >= size)
             throw new IndexOutOfBoundsException("index=" + index + " but size=" + size);
         return index;
@@ -371,7 +403,7 @@ public abstract class AbstractQueryContainer<T> extends AbstractContainer implem
     public List<Integer> getItemIds(int startIndex, int numberOfItems) {
         if (numberOfItems < 0)
             throw new IllegalArgumentException("numberOfItems < 0");
-        final long size = this.ensureList(startIndex).size();
+        final long size = this.ensureList(startIndex);
         if (startIndex < 0 || startIndex > size)
             throw new IndexOutOfBoundsException("startIndex=" + startIndex + " but size=" + size);
         if (startIndex + numberOfItems > size)
@@ -384,7 +416,7 @@ public abstract class AbstractQueryContainer<T> extends AbstractContainer implem
         if (!(itemId instanceof Integer))
             return -1;
         final int index = ((Integer)itemId).intValue();
-        if (index < 0 || index >= this.ensureList(index).size())
+        if (index < 0 || index >= this.ensureList(index))
             return -1;
         return index;
     }
@@ -396,7 +428,7 @@ public abstract class AbstractQueryContainer<T> extends AbstractContainer implem
         if (!(itemId instanceof Integer))
             return null;
         int index = ((Integer)itemId).intValue();
-        if (index < 0 || index + 1 >= this.ensureList(index).size())
+        if (index < 0 || index + 1 >= this.ensureList(index))
             return null;
         return index + 1;
     }
@@ -406,19 +438,19 @@ public abstract class AbstractQueryContainer<T> extends AbstractContainer implem
         if (!(itemId instanceof Integer))
             return null;
         int index = ((Integer)itemId).intValue();
-        if (index - 1 < 0 || index >= this.ensureList(index).size())
+        if (index - 1 < 0 || index >= this.ensureList(index))
             return null;
         return index - 1;
     }
 
     @Override
     public Integer firstItemId() {
-        return this.ensureList(0).size() == 0 ? null : 0;
+        return this.ensureList(0) == 0 ? null : 0;
     }
 
     @Override
     public Integer lastItemId() {
-        long size = this.ensureList(0).size();
+        long size = this.ensureList(0);
         return size == 0 ? null : (int)size - 1;
     }
 
@@ -427,7 +459,7 @@ public abstract class AbstractQueryContainer<T> extends AbstractContainer implem
         if (!(itemId instanceof Integer))
             return false;
         int index = ((Integer)itemId).intValue();
-        long size = this.ensureList(index).size();
+        long size = this.ensureList(index);
         return size > 0 && index == 0;
     }
 
@@ -436,7 +468,7 @@ public abstract class AbstractQueryContainer<T> extends AbstractContainer implem
         if (!(itemId instanceof Integer))
             return false;
         int index = ((Integer)itemId).intValue();
-        long size = this.ensureList(index).size();
+        long size = this.ensureList(index);
         return size > 0 && index == size - 1;
     }
 
